--- a/WorkoutWeb/packages.config
+++ b/WorkoutWeb/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.2.21" targetFramework="net45" />
+  <package id="bootbox" version="4.2.0" targetFramework="net45" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="CryptSharpOfficial" version="2.0.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
